# FancyMumbleNext

./: .gitignore  ANDROID_DEV.md  Cargo.toml  LICENSE  README.md  cargo_check_err.txt  clippy_out.txt  flake.nix  output.txt  package-lock.json
crates/fancy-denoiser-deepfilter/: Cargo.toml
crates/fancy-denoiser-deepfilter/src/: lib.rs
crates/mumble-gui/: Cargo.toml  Dioxus.toml
crates/mumble-gui/assets/: style.css
crates/mumble-gui/src/: main.rs  state.rs
crates/mumble-gui/src/components/: channel_sidebar.rs  chat_view.rs  connect_page.rs  mod.rs
crates/mumble-gui/src/services/: mod.rs  mumble_backend.rs
crates/mumble-protocol/: Cargo.toml  build.rs  docker-compose.test.yml
crates/mumble-protocol/doc/: README.md  architecture.md  detailed-design.md  persistent-chat-server-guide.md  persistent-chat.md
crates/mumble-protocol/doc/diagrams/: activity_work_queue.puml  class_audio.puml  class_command.puml  class_overview.puml  class_state.puml  class_transport.puml  component_overview.puml  flow_audio_inbound.puml  flow_audio_outbound.puml  flow_command_execution.puml  flow_connection.puml  flow_event_loop.puml  pchat_component_overview.puml  pchat_encryption_pipeline.puml  pchat_epoch_fork_resolution.puml  pchat_key_exchange_post_join.puml  pchat_message_dual_path.puml  pchat_trust_levels.puml
crates/mumble-protocol/proto/: Mumble.proto  MumbleUDP.proto
crates/mumble-protocol/src/: client.rs  error.rs  event.rs  fancy_codec.rs  fancy_message_support.rs  lib.rs  message.rs  state.rs  work_queue.rs
crates/mumble-protocol/src/audio/: capture.rs  decoder.rs  encoder.rs  mixer.rs  mod.rs  pipeline.rs  playback.rs  sample.rs
crates/mumble-protocol/src/audio/filter/: automatic_gain.rs  denoiser.rs  low_pass.rs  mod.rs  noise_gate.rs  volume.rs
crates/mumble-protocol/src/command/: authenticate.rs  ban_user.rs  channel_listen.rs  delete_channel.rs  disconnect.rs  join_channel.rs  kick_user.rs  mod.rs  move_user.rs  permission_query.rs  register_user.rs  remove_user_avatar.rs  request_acl.rs  request_ban_list.rs  request_blob.rs  request_link_preview.rs  request_user_list.rs  request_user_stats.rs  reset_user_comment.rs  send_acl.rs  send_audio.rs  send_ban_list.rs  send_draw_stroke.rs  send_fancy_push_register.rs  send_fancy_push_update.rs  send_fancy_subscribe_push.rs  send_pchat_ack.rs  send_pchat_delete_messages.rs  send_pchat_epoch_countersig.rs  send_pchat_fetch.rs  send_pchat_key_announce.rs  send_pchat_key_challenge_response.rs  send_pchat_key_exchange.rs  send_pchat_key_holder_report.rs  send_pchat_key_holders_query.rs  send_pchat_message.rs  send_pchat_pin.rs  send_pchat_reaction.rs  send_pchat_sender_key_distribution.rs  send_ping.rs  (+16 more)
crates/mumble-protocol/src/persistent/: config.rs  encryption.rs  keys.rs  mod.rs  provider.rs  wire.rs
crates/mumble-protocol/src/persistent/encryption/: archive_key.rs  mod.rs  signed_data.rs
crates/mumble-protocol/src/persistent/keys/: consensus.rs  crypto.rs  exchange.rs  mod.rs  peer.rs  trust.rs  types.rs
crates/mumble-protocol/src/persistent/protocol/: mod.rs
crates/mumble-protocol/src/proto/: mod.rs  mumble_proto.rs  mumble_udp.rs
crates/mumble-protocol/src/transport/: audio_codec.rs  codec.rs  mod.rs  ocb2.rs  tcp.rs  udp.rs
crates/mumble-protocol/tests/: .gitignore  audio_quality.rs  integration.rs  pchat_integration.rs
crates/mumble-protocol/tests/samples/: LICENSE.txt
crates/mumble-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/mumble-tauri/capabilities/: default.json  desktop.json  draw-overlay.json  popout.json  updater.json
crates/mumble-tauri/src/: audio.rs  connection_service.rs  fcm_service.rs  getauxval_fix.c  lib.rs  linux_desktop.rs  linux_webview.rs  main.rs  platform.rs  tray.rs  utils.rs  wayland_surface_helper.c
crates/mumble-tauri/src/audio/: android.rs  desktop.rs  mod.rs  rodio_desktop.rs
crates/mumble-tauri/src/commands/: admin.rs  audio.rs  certificates.rs  channels.rs  connection.rs  dm.rs  files.rs  image.rs  keyshare.rs  messaging.rs  mod.rs  offload.rs  popout.rs  profile.rs  public_servers.rs  realtime.rs  server.rs  servers.rs  system.rs  window.rs
crates/mumble-tauri/src/commands/draw_overlay/: mod.rs  win_tracker.rs
crates/mumble-tauri/src/platform/: badge.rs  mod.rs
crates/mumble-tauri/src/platform/android/: fcm_service.rs  mod.rs
crates/mumble-tauri/src/platform/desktop/: mod.rs  tray.rs
crates/mumble-tauri/src/platform/linux/: desktop.rs  mod.rs  webview.rs
crates/mumble-tauri/src/platform/window/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
crates/mumble-tauri/src/state/: admin.rs  audio.rs  audio_tasks.rs  channels.rs  connection.rs  emotes.rs  event_handler.rs  file_server.rs  hash_names.rs  local_cache.rs  mod.rs  offload.rs  offload_ops.rs  pchat.rs  profile.rs  protocol_commands.rs  query.rs  recording.rs  registry.rs  search.rs  sessions.rs  shared_handle.rs  types.rs
crates/mumble-tauri/src/state/handler/: acl.rs  ban_list.rs  channel_remove.rs  channel_state.rs  codec_version.rs  custom_reactions_config.rs  draw_stroke.rs  link_preview.rs  mod.rs  pchat.rs  permission_denied.rs  permission_query.rs  ping.rs  plugin_data.rs  read_receipt.rs  reject.rs  server_config.rs  server_sync.rs  tests.rs  text_message.rs  typing_indicator.rs  user_list.rs  user_remove.rs  user_state.rs  user_stats.rs  version.rs  watch_sync.rs  webrtc_signal.rs
crates/mumble-tauri/src/state/messaging/: dm.rs  (+3 more)
crates/mumble-tauri/src/updater/: commands.rs  manager.rs  mod.rs  window.rs
crates/mumble-tauri/src/webrtc/: capture.rs  encoder.rs  gstreamer_pipeline.rs  mod.rs  stream_server.rs
crates/mumble-tauri/ui/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/mumble-tauri/ui/src/: App.tsx  __test_minimal.test.ts  fonts.css  global.css  icons.ts  lazyBlobs.ts  main.tsx  messageOffload.ts  personalizationStorage.ts  preferencesStorage.ts  profileFormat.ts  serverStorage.ts  store.ts  theme.css  types.ts
crates/signal-bridge/: Cargo.toml
crates/signal-bridge/src/: context.rs  lib.rs
(+480 files in other folders)
