[workspace]
resolver = "2"
members = [
    "crates/fancy-utils",
    "crates/mumble-protocol",
    "crates/mumble-tauri",
]
# signal-bridge is excluded because it depends on AGPL-licensed
# libsignal-protocol and is built separately as a dynamic library.
exclude = ["crates/signal-bridge"]

# -- Workspace-wide lints --------------------------------------------
# These apply to every crate in the workspace automatically.
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_crate_dependencies = "warn"
unused_results = "deny"
missing_debug_implementations = "deny"
unused_qualifications = "warn"
unreachable_pub = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
# Lint groups – use lower priority so individual overrides take effect.
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Individual style / pedantic lints (default priority 0 overrides groups)
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
cloned_instead_of_copied = "warn"
implicit_clone = "warn"
uninlined_format_args = "warn"
doc_markdown = "warn"
missing_errors_doc = "allow"         # too noisy for early development
module_name_repetitions = "allow"    # common pattern in Rust
unwrap_used = "deny"
excessive_nesting = "deny"
too_many_lines = "deny"
allow_attributes_without_reason = "deny"
branches_sharing_code = "deny"
collapsible_else_if = "deny"
expect_used = "warn"

# -- Release profile optimizations -----------------------------------
[profile.release]
lto = "thin"              # Link-Time Optimization (thin = fast builds, good codegen)
codegen-units = 1         # Single codegen unit for maximum optimization
opt-level = 3             # Full optimizations
strip = "symbols"         # Strip debug symbols from the binary
panic = "abort"           # Abort on panic (smaller binary, no unwind overhead)
