[package]
name = "mumble-protocol"
version = "0.1.3"
edition = "2021"
description = "Async Mumble protocol client library with priority-based work queue"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util"] }

# TLS for Mumble TCP connection
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1.0.6"
rustls-pemfile = "2"

# Protobuf
prost = "0.14.3"
bytes = "1"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

# Audio codec (C libopus via audiopus_sys - reliable, well-tested)
opus = { version = "0.3", optional = true }

# Persistent chat - encryption and key management
chacha20poly1305 = { version = "0.10", optional = true }
x25519-dalek = { version = "2", features = ["static_secrets"], optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.10.0", optional = true }
rmp-serde = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
default = []
opus-codec = ["opus"]
persistent-chat = [
    "chacha20poly1305",
    "x25519-dalek",
    "ed25519-dalek",
    "hkdf",
    "sha2",
    "rand",
    "rmp-serde",
    "serde",
    "uuid",
    "serde_bytes",
]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util", "test-util"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
minimp3 = "0.6.1"
hound = "3.5"

[lints]
workspace = true

[build-dependencies]
prost-build = "0.14.3"
