[package]
name = "mumble-tauri"
version = "0.2.1"
edition = "2021"
description = "Tauri desktop & mobile GUI for mumble-protocol"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mumble-tauri"
path = "src/main.rs"

[dependencies]
fancy-utils = { path = "../fancy-utils" }
tauri = { version = "2.10.1", features = [] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.14.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.10"
ring = "0.17"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2"

# Desktop-only dependencies (cpal, global shortcuts, and Opus are not available on Android).
[target.'cfg(not(target_os = "android"))'.dependencies]
mumble-protocol = { path = "../mumble-protocol", features = ["opus-codec", "persistent-chat"] }
cpal = "0.17.3"
tauri-plugin-global-shortcut = "2"

# Android: mumble-protocol without Opus (audio is not supported on Android).
[target.'cfg(target_os = "android")'.dependencies]
mumble-protocol = { path = "../mumble-protocol", features = ["persistent-chat"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
