[package]
name = "mumble-tauri"
version = "0.2.1"
edition = "2021"
description = "Tauri desktop & mobile GUI for mumble-protocol"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mumble-tauri"
path = "src/main.rs"

[dependencies]
fancy-utils = { path = "../fancy-utils" }
tauri = { version = "2.10.1", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.14.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.10"
ring = "0.17"
base64 = "0.22"
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2"
hound = "3.5"
chrono = "0.4"
png = "0.18"

# Desktop-only dependencies (cpal, global shortcuts, and Opus are not available on Android).
[target.'cfg(not(target_os = "android"))'.dependencies]
mumble-protocol = { path = "../mumble-protocol", features = ["opus-codec", "persistent-chat"] }
cpal = "0.17.3"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

# Linux: webkit2gtk for webview settings (hardware acceleration, etc.).
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

# Android: mumble-protocol with Opus codec + oboe for native audio I/O.
[target.'cfg(target_os = "android")'.dependencies]
mumble-protocol = { path = "../mumble-protocol", features = ["opus-codec", "persistent-chat"] }
oboe = "0.6.1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"
