[package]
name = "mumble-tauri"
version = "0.2.1"
edition = "2021"
description = "Tauri desktop & mobile GUI for mumble-protocol"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mumble-tauri"
path = "src/main.rs"

[dependencies]
fancy-utils = { path = "../fancy-utils" }
tauri = { version = "2.10.1", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
futures-util = { version = "0.3", default-features = false }
tokio-util = { version = "0.7", features = ["io"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.14.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.10"
ring = "0.17"
base64 = "0.22"
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "multipart", "stream", "json"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2"
hound = "3.5"
chrono = "0.4"

# Desktop-only dependencies (cpal, global shortcuts, and Opus are not available on Android).
[target.'cfg(not(target_os = "android"))'.dependencies]
png = "0.18"
mumble-protocol = { path = "../mumble-protocol", features = ["opus-codec", "persistent-chat", "rnnoise-denoiser", "deepfilternet-denoiser"] }
cpal = "0.17.3"
rodio = { version = "0.22", features = ["recording"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

# Android: mumble-protocol with Opus codec + oboe for native audio I/O.
[target.'cfg(target_os = "android")'.dependencies]
mumble-protocol = { path = "../mumble-protocol", features = ["opus-codec", "persistent-chat", "rnnoise-denoiser"] }
oboe = "0.6.1"

# Windows-only: native window subclassing for aspect-ratio constraints
# (see crates/mumble-tauri/src/platform/window/windows.rs).
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

# macOS-only: NSWindow.setContentAspectRatio: for native aspect-ratio
# constraints (see crates/mumble-tauri/src/platform/window/macos.rs).
# objc2-foundation gives us NSRect / NSSize; we send AppKit messages
# through raw `AnyObject` pointers so objc2-app-kit is not needed.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }

# Linux-only: gtk_window_set_geometry_hints for native aspect-ratio
# constraints (see crates/mumble-tauri/src/platform/window/linux.rs).
# The gtk version must match the one tao/tauri pulls in (0.18).
[target.'cfg(all(unix, not(any(target_os = "android", target_os = "macos", target_os = "ios"))))'.dependencies]
gtk = { version = "0.18", default-features = false }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"
